Dang ky, tham gia

--- a/LCTMoodle/Views/KhoaHoc/DangKyThamGia.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/DangKyThamGia.cshtml
@@ -96,9 +96,10 @@
                         </section>
                         break;
                     case 2:
-                        <p style="color: #555;">Bạn đã được mời vào nhóm, bạn cần <a href="javascript:void(0)" data-chuc-nang="xac-nhan"><b>xác nhận</b></a> để vào khóa học</p>
+                        <p style="color: #555;">Bạn đã được mời vào nhóm, bạn cần <a href="javascript:void(0)" data-chuc-nang="xac-nhan"><b>xác nhận</b></a> để vào khóa học. Hoặc bạn có thể <a href="javascript:void(0)" data-chuc-nang="tu-choi"><b>từ chối</b></a> lời mời nếu không muốn tham gia</p>
                         <section class="lct-form">
                             <a class="button chap-nhan" data-chuc-nang="xac-nhan">Xác nhận</a>
+                            <a class="button chap-nhan" data-chuc-nang="tu-choi">Từ chối</a>
                         </section>
                         break;
                     case 3:
