--- a/LCTMoodle/Views/KhoaHoc/Xem.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Xem.cshtml
@@ -13,10 +13,48 @@
 
     List<string> chucNang = new List<string>();
     
-    ViewData["ChucNang"] = new List<string>()
+    //Kiểm tra thành viên để hiển thị các nút chức năng tham gia/rời nhóm
+    if (thanhVien == null)
     {
-        "Quản lý quyền", "href=\"/QuanlyQuyen/KH/" + Model.ma + "\""
-    };    
+        if (Model.canDangKy)
+        {
+            if (!Model.hanDangKy.HasValue || Model.hanDangKy > DateTime.Now)
+            {
+                chucNang.Add("Đăng ký");
+                chucNang.Add("data-chuc-nang=\"dang-ky\"");
+            }
+        }
+        else
+        {
+            chucNang.Add("Tham gia");
+            chucNang.Add("data-chuc-nang=\"tham-gia\"");   
+        }
+    }
+    else
+    {
+        switch(thanhVien.trangThai)
+        {
+            case 0:
+                chucNang.Add("Rời khóa học");
+                chucNang.Add("data-chuc-nang=\"roi-kh\"");
+                break;
+            case 1:
+                chucNang.Add("Hủy đăng ký");
+                chucNang.Add("data-chuc-nang=\"huy-dang-ky\"");
+                break;
+            case 2:
+                chucNang.Add("Xác nhận lời mời");
+                chucNang.Add("data-chuc-nang=\"xac-nhan-moi\"");
+                chucNang.Add("Từ chối lời mời");
+                chucNang.Add("data-chuc-nang=\"tu-choi-moi\"");
+                break;
+        }
+    }
+
+    chucNang.Add("Quản lý quyền");
+    chucNang.Add("href=\"/QuanlyQuyen/KH/" + Model.ma + "\"");
+
+    ViewData["ChucNang"] = chucNang;
 }
 
 @section Styles {
@@ -25,12 +63,12 @@
 }
 
 @section Scripts {
-    <script>
-        var maKhoaHoc = '@Model.ma';
-        var tieuDe = '@Html.Raw(Model.ten)' + ' - LCTMoodle';
-    </script>
     <script src="/Xem.js/KhoaHoc/"></script>
     <script src="/Khung.js/BinhLuan/"></script>
+    <script>
+        maKhoaHoc = '@Model.ma';
+        tieuDe = '@Html.Raw(Model.ten)' + ' - LCTMoodle';
+    </script>
 }
 
 <section id="khung_chon_hien_thi" class="khung-chon-hien-thi">
