--- a/LCTMoodle/Views/NguoiDung/DangKy.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangKy.cshtml
@@ -60,11 +60,21 @@
                     </li>
                     <li>
                         <section class="tieu-de">
-                            <label>(*) Họ tên:</label>
+                            <label>(*) Họ</label>
                         </section>
                         <section class="noi-dung">
                             <article class="input">
-                                <input type="text" name="HoTen" data-validate="bat-buoc" />
+                                <input type="text" name="Ho" data-validate="bat-buoc" />
+                            </article>
+                        </section>
+                    </li>
+                    <li>
+                        <section class="tieu-de">
+                            <label>(*) Tên</label>
+                        </section>
+                        <section class="noi-dung">
+                            <article class="input">
+                                <input type="text" name="Ten" data-validate="bat-buoc" />
                             </article>
                         </section>
                     </li>
