--- a/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
@@ -58,7 +58,7 @@
                     </li>                    
                 </ul>
                 <section class="khung-button">
-                    <button class="chap-nhan">
+                    <button type="submit" class="chap-nhan">
                         Đăng nhập
                     </button>
                 </section>
