--- a/LCTMoodle/Views/Quyen/_DanhSach_NguoiDung_Tim.cshtml
+++ b/LCTMoodle/Views/Quyen/_DanhSach_NguoiDung_Tim.cshtml
@@ -9,7 +9,7 @@
 {
     <li data-doi-tuong="item-nguoi-dung" class="item ngoai-nhom" data-ma="@nguoiDung.ma">
         <img src="/boy.png/" alt="Alternate Text" />
-        <a href="#">@nguoiDung.hoTen</a>
+        <a href="#">@(nguoiDung.ho + " " + nguoiDung.ten)</a>
         <section class="khung-chuc-nang-lct">
             <ul data-doi-tuong="cnnd-@nguoiDung.ma">
                 <li>
