--- a/LCTMoodle/Views/Quyen/_Item_NguoiDung.cshtml
+++ b/LCTMoodle/Views/Quyen/_Item_NguoiDung.cshtml
@@ -2,7 +2,7 @@
 
 <li data-doi-tuong="item-nguoi-dung" class="item" data-ma="@Model.ma">
     <img src="/boy.png/" />
-    <a href="#">@Model.hoTen</a>
+    <a href="#">@(Model.ho + " " + Model.ten)</a>
     <section class="khung-chuc-nang-lct">
         <ul data-doi-tuong="cnnd-@Model.ma">
             <li>
