--- a/LCTMoodle/Views/KhoaHoc/ThanhVien.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/ThanhVien.cshtml
@@ -2,16 +2,19 @@
 @{
     Layout = "~/Views/LCT/Khung.cshtml";
 
-    var thanhVien = ViewData["ThanhVien"] as DTOLayer.KhoaHoc_NguoiDungDTO;
-    var thanhVienDangKy = ViewData["ThanhVienDangKy"] as DTOLayer.KhoaHoc_NguoiDungDTO;
+    var thanhVien = ViewData["ThanhVien"] as List<DTOLayer.KhoaHoc_NguoiDungDTO>;
+    var thanhVienDangKy = ViewData["ThanhVienDangKy"] as List<DTOLayer.KhoaHoc_NguoiDungDTO>;
         
     ViewData["TieuDe"] = "Danh sách thành viên - " + Model.ten;
 
-    ViewData["DieuHuong"] = new List<string>();
+    ViewData["DieuHuong"] = new List<string>() {
+        Model.ten, "/KhoaHoc/" + Model.ma,
+        "Danh sách thành viên", "/KhoaHoc/ThanhVien/" + Model.ma
+    };
 
-    List<string> chucNang = new List<string>();
+    //List<string> chucNang = new List<string>();
 
-    ViewData["ChucNang"] = chucNang;
+    //ViewData["ChucNang"] = chucNang;
 }
 
 @section Styles {
@@ -23,4 +26,59 @@
     <script>
         maKhoaHoc = '@Model.ma';
     </script>
+}
+
+@if (thanhVienDangKy != null)
+{
+    <article class="hop">
+        <section class="tieu-de">
+            Danh sách thành viên đăng ký
+        </section>
+        <section class="noi-dung khung-dang-ky">
+            <ul class="danh-sach">
+                @foreach(var tv in thanhVienDangKy)
+                {
+                    <li class="item" data-ma="@tv.nguoiDung.ma">
+                        <img src="/boy.png/" />
+                        <a href="#">@(tv.nguoiDung.ho + " " + tv.nguoiDung.ten)</a>
+                        <section class="khung-chuc-nang">
+                            <a data-chuc-nang="dong-y" class="dong-y" title="Chấp nhận"><i></i></a>
+                            <a data-chuc-nang="tu-choi" class="tu-choi" title="Từ chối"><i></i></a>
+                            <a data-chuc-nang="chan" class="chan" title="Chặn"><i></i></a>
+                        </section>
+                    </li>
+                }
+            </ul>
+        </section>
+    </article>
+}
+
+@if (thanhVien != null)
+{
+    <article class="hop">
+        <section class="tieu-de">
+            Danh sách thành viên đăng ký
+        </section>
+        <section class="noi-dung khung-dang-ky">
+            <ul class="danh-sach">
+                @foreach(var tv in thanhVienDangKy)
+                {
+                    <li class="item" data-ma="@tv.nguoiDung.ma">
+                        <img src="/boy.png/" />
+                        <a href="#">@(tv.nguoiDung.ho + " " + tv.nguoiDung.ten)</a>
+                        <section class="khung-chuc-nang-lct">
+                            <ul data-doi-tuong="cnnd-@tv.nguoiDung.ma">
+                                <li>
+                                    <a data-chuc-nang="xoa">Loại bỏ thành viên</a>
+                                </li>
+                            </ul>
+                            <button data-chuc-nang="tat-mo" data-mo-doi-tuong="cnnd-@tv.nguoiDung.ma">
+                                <i class="pe-7f-config"></i>
+                            </button>
+                        </section>
+                    </li>
+                }
+            </ul>
+        </section>
+    </article>
 }
