--- a/LCTMoodle/Views/KhoaHoc/Xem.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Xem.cshtml
@@ -51,6 +51,8 @@
         }
     }
 
+    chucNang.Add("Danh sách thành viên");
+    chucNang.Add("href=\"/KhoaHoc/DanhSachThanhVien/" + Model.ma + "\"");
     chucNang.Add("Quản lý quyền");
     chucNang.Add("href=\"/QuanlyQuyen/KH/" + Model.ma + "\"");
 
