--- a/LCTMoodle/Content/styles/KhoaHoc/DanhSachThanhVien.css
+++ b/LCTMoodle/Content/styles/KhoaHoc/DanhSachThanhVien.css
@@ -1,16 +1,16 @@
 ﻿/*#region Khung đăng ký */
 
-.khung-dang-ky {
+.khung-nguoi-dung {
 
 }
 
-    .khung-dang-ky .danh-sach {
+    .khung-nguoi-dung .danh-sach {
         display: flex;
         justify-content: space-around;
         flex-wrap: nowrap;
     }
 
-    .khung-dang-ky .item {
+    .khung-nguoi-dung .item {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -19,33 +19,34 @@
         padding: 5px;
         border: 1px solid #ddd;
         background-color: #fff;
+        position: relative;
     }
     
-        .khung-dang-ky .item img {
+        .khung-nguoi-dung .item img {
             width: 50px;
             height: 50px;
         }
     
-        .khung-dang-ky .item > a {
+        .khung-nguoi-dung .item > a {
             font-weight: bold;
             font-size: 11px;
             color: #333;
         }
     
-        .khung-dang-ky .item .khung-chuc-nang {
+        .khung-nguoi-dung .item .khung-chuc-nang {
             display: inline-block;
             margin-top: 10px;
             cursor: default;
         }
     
-            .khung-dang-ky .item .khung-chuc-nang a {
+            .khung-nguoi-dung .item .khung-chuc-nang a {
                 display: inline-block;
                 padding: 5px;
                 border: 1px solid #ddd;
                 background-color: #fafafa;
             }
     
-            .khung-dang-ky .item .khung-chuc-nang i {
+            .khung-nguoi-dung .item .khung-chuc-nang i {
                 display: block;
                 width: 16px;
                 height: 16px;
@@ -53,19 +54,20 @@
                 opacity: 0.8;
             }
     
-                .khung-dang-ky .item .khung-chuc-nang a:hover i {
+                .khung-nguoi-dung .item .khung-chuc-nang a:hover i {
                     opacity: 1;
                 }
     
-                .khung-dang-ky .item .khung-chuc-nang .dong-y i {
+                .khung-nguoi-dung .item .khung-chuc-nang .dong-y i {
                     background-position: -72px -0px;
                 }
     
-                .khung-dang-ky .item .khung-chuc-nang .tu-choi i {
+                .khung-nguoi-dung .item .khung-chuc-nang .tu-choi i,
+                .khung-nguoi-dung .item .khung-chuc-nang .bo-chan i {
                     background-position: -72px -16px;
                 }
     
-                .khung-dang-ky .item .khung-chuc-nang .chan i {
+                .khung-nguoi-dung .item .khung-chuc-nang .chan i {
                     background-position: -72px -32px;
                 }
 
