--- a/LCTMoodle/Views/GiaoTrinh/Index.cshtml
+++ b/LCTMoodle/Views/GiaoTrinh/Index.cshtml
@@ -13,10 +13,10 @@
     };
 }
 @section Styles {
-    <link href="/Tao.css/GiaoTrinh" rel="stylesheet" />
+    <link href="/Index.css/GiaoTrinh" rel="stylesheet" />
 }
 @section Scripts {
-    <script src="/Tao.js/GiaoTrinh"></script>
+    <script src="/Index.js/GiaoTrinh"></script>
     <script>
         maKhoaHoc = '@khoaHoc.ma';
     </script>
