--- a/LCTMoodle/Views/ChuDe/QuanLy.cshtml
+++ b/LCTMoodle/Views/ChuDe/QuanLy.cshtml
@@ -30,7 +30,7 @@
         </section>
         <section class="con">
             <ul id="khung_danh_sach" class="khung-danh-sach">@Html.Partial("~/Views/ChuDe/_DanhSach.cshtml", Model)</ul>   
-            <a href="javascript:void(0)" data-chuc-nang="tao">
+            <a data-chuc-nang="tao">
                 <i class="pe-7s-plus"></i>
                 Hiện chưa có nút con, hãy tạo một nút con mới
             </a>
