--- a/LCTMoodle/Views/BaiTapNop/_DanhSachNop.cshtml
+++ b/LCTMoodle/Views/BaiTapNop/_DanhSachNop.cshtml
@@ -32,7 +32,7 @@
                             <section class="phai">
                                 <section class="thong-tin">
                                     <a class="nguoi-nop" href="#">
-                                        @baiNop.nguoiTao.hoTen
+                                        @(baiNop.nguoiTao.ho + " " + baiNop.nguoiTao.ten)
                                     </a>
                                     <span class="thoi-gian">
                                         @baiNop.thoiDiemTao.Value.ToString("H:mm d/M/yyyy")
