--- a/LCTMoodle/Views/BaiVietDienDan/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_Item.cshtml
@@ -20,7 +20,7 @@
             </section>
             <section class="phai">
                 <section class="nguoi-dung">
-                    <a href="#">@Model.nguoiTao.hoTen</a>
+                    <a href="#">@(Model.nguoiTao.ho + " " + Model.nguoiTao.ten)</a>
                 </section>
                 <section class="bai-viet">
                     <section class="thoi-gian">
