--- a/LCTMoodle/Views/BinhLuan/_Item.cshtml
+++ b/LCTMoodle/Views/BinhLuan/_Item.cshtml
@@ -8,7 +8,7 @@
     </section>
     <section class="phai">
         <section class="nguoi-dung">
-            <a href="#">@Model.nguoiTao.hoTen</a>
+            <a href="#">@(Model.nguoiTao.ho + " " + Model.nguoiTao.ten)</a>
         </section>
         <section class="noi-dung">
             @Model.noiDung
